--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,18 +1,19 @@
+html,
+body{
+    height: 100%;
+}
+
+#root{
+    height: 100%;
+}
 
 .App {
     text-align: center;
-}
-
-.App nav {
-    display: flex;
-    justify-content: space-between;
-    background-color: #333333;
-    color: #ffffff;
-    padding: 0.5rem 1rem;
+    height: 100%;
 }
 
 .App nav a {
-    color: #ffffff;
+    color: #040404;
     text-decoration: none;
     margin-left: 1rem;
     margin-right: 1rem;
