--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,7 +8,6 @@ body{
 }
 
 .App {
-    text-align: center;
     height: 100%;
 }
 
@@ -17,4 +16,8 @@ body{
     text-decoration: none;
     margin-left: 1rem;
     margin-right: 1rem;
+}
+
+.h1-margin{
+    margin-left: 1.5rem;
 }
